[package]
name = "libvnc-rs-examples"
version = "0.1.0"
authors = ["rayylee <rayylee@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.vncserver]
path = "../vncserver"


[[example]]
name = "sample"
path = "sample/main.rs"
