[package]
name = "libvnc-rs-examples"
version = "0.2.2"
authors = ["rayylee <rayylee@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.vncserver]
path = "../vncserver"


[[example]]
name = "sample"
path = "sample/main.rs"

[[example]]
name = "sample16"
path = "sample16/main.rs"
