[package]
name = "vncserver"
version = "0.1.0"
authors = ["rayylee <rayylee@foxmail.com>"]
edition = "2018"
keywords = ["vnc", "vncserver", "rfb"]
license = "MIT"
readme = "README.md"

[lib]
name = "vncserver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.58"
pkg-config = "0.3"
cc = "1.0"
