[package]
name = "vncserver"
version = "0.2.1"
authors = ["rayylee <rayylee@foxmail.com>"]
edition = "2018"
keywords = ["vnc", "libvnc", "vncserver", "rfb"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rayylee/libvnc-rs"
homepage = "https://github.com/rayylee/libvnc-rs"
documentation = "https://rayylee.github.io/libvnc-rs/vncserver"
description = "Rust bindings for the Libvncserver library"

[lib]
name = "vncserver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.58"
pkg-config = "0.3"
cc = "1.0"
